Bug 981325: Consider Float32 not to be a simple primitive; r=h4writer

--HG--
extra : rebase_source : 1a8d2f001f3bfa4acf60dfcc9fdbc901bd3b8345